--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.max-width {
+    @apply max-w-[1480px] mx-auto 2xl:px-0 xl:px-14 lg:px-10 md:px-8 px-3;
+  }
