--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800&family=Homemade+Apple&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: 'DM Sans', sans-serif;
 }
 
 .max-width {
-    @apply max-w-[1480px] mx-auto 2xl:px-0 xl:px-14 lg:px-10 md:px-8 px-3;
-  }
+  @apply max-w-[1480px] mx-auto 2xl:px-0 xl:px-14 lg:px-10 md:px-8 px-3;
+}
